Fixed unit propagation not checking the next unit clause if there was a unit clause in front of it. If all unit clauses in the formula are checked and no modifications are made, that is the final simplification of unit prop and so comes out of the loop properly.